@@ -1,6 +1,8 @@
 LOVE 0.6.2
 ----------
 
+  * Fixed a bug causing ImageFonts to cut off some pixels.
+  * Fixed a bug where filled rectangles were too small.
   * Fixed a bug in Image:setFilter where it would switch the parameters.
   * Fixed a bug in ImageRasterizer where it wasn't using the data.
   * Image filter and wrap modes now use string constants as well.
